// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots renders default button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
  >
    Default Button
  </button>
</div>
`;

exports[`Button Snapshots renders destructive button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 py-2 px-4"
  >
    Destructive Button
  </button>
</div>
`;

exports[`Button Snapshots renders disabled button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
    disabled=""
  >
    Disabled Button
  </button>
</div>
`;

exports[`Button Snapshots renders ghost button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none hover:bg-accent hover:text-accent-foreground h-10 py-2 px-4"
  >
    Ghost Button
  </button>
</div>
`;

exports[`Button Snapshots renders large button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-foreground hover:bg-primary/90 h-11 px-8 rounded-md"
  >
    Large Button
  </button>
</div>
`;

exports[`Button Snapshots renders link button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none text-primary underline-offset-4 hover:underline h-10 py-2 px-4"
  >
    Link Button
  </button>
</div>
`;

exports[`Button Snapshots renders outline button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 py-2 px-4"
  >
    Outline Button
  </button>
</div>
`;

exports[`Button Snapshots renders secondary button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 py-2 px-4"
  >
    Secondary Button
  </button>
</div>
`;

exports[`Button Snapshots renders small button correctly 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-3 rounded-md"
  >
    Small Button
  </button>
</div>
`;
